--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <input type="color" id="inputColorPicker">
     <div id="canvas"></div>
     <script src="script.js"></script>
 </body>
