add clear canvas functionallity

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <input type="color" id="inputColorPicker">
+    <button id="clear">Clear</button>
     <div id="canvas"></div>
     <script src="script.js"></script>
 </body>
