--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <input type="color" id="inputColorPicker">
     <button id="clear">Clear</button>
+    <input type="range" min = "1" max = "100" value = "16" id = "sizeOfCanvas">
     <div id="canvas"></div>
     <script src="script.js"></script>
 </body>
