--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="color" id="inputColorPicker">
-    <button id="clear">Clear</button>
-    <input type="range" min = "1" max = "100" value = "16" id = "sizeOfCanvas">
-    <div id="canvas"></div>
+    <div class="forCenter">
+        <div id="tools-canvas">
+            <div id="tools">
+                <input type="color" id="inputColorPicker">
+                <button id="clear">Clear</button>
+                <div class="scroll">
+                    <input type="range" min = "1" max = "100" value = "16" id = "sizeOfCanvas" oninput="this.nextElementSibling.value = this.value">
+                    <output>16</output>
+                </div>
+            </div>
+            <div id="canvas"></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
